강원대 BE 최현준 Step2-주문하기 (#233)
* refactor:스택트레이스 보이게 수정

* feat(wish): 상품 옵션 관리 및 위시리스트 기능 확장

- Wish에 옵션 ID 및 옵션명 추가
- Product와 Option 간 관계 리팩토링
- Option 관리
  - OptionEntity에 updateOption 메서드 및 관계 설정 기능 추가
  - OptionEntity 및 Option 모델에 toString 메서드 추가
- ProductEntityMapper, WishEntityMapper 변경 사항 반영

* feat(product, wish): 상품 및 위시 기능 확장 및 리팩토링

- 상품 옵션 관련 CreateOptionRequest 및 UpdateOptionRequest DTO 추가
- CreateProductRequest 및 UpdateProductRequest에 옵션 DTO 수정 적용
- WishRepository에 findByMemberIdAndOptionId 메서드 추가
- WishPersistenceAdapter에서 새로운 메서드 구현
- ProductPersistenceAdapter와 ProductInteractor에 EntityManager와 로그 추가
- 옵션 관련 로직 리팩토링:
  - ProductInteractor에서 옵션 ID를 직접 처리
  - updateProduct에서 기존 findOptionIdByName 메서드 제거
- 예외 타입 IllegalArgumentException -> NoSuchElementException으로 수정

* feat(product, wish): 테스트 코드 작성

* feat(product): 옵션 관리 기능 추가 및 상품 관련 로직 개선

- 상품 추가/수정 시 옵션(id, name, quantity) 관리 기능 구현
- 옵션 필드 추가 기능 및 삭제 기능
- 위시리스트 추가 시 옵션 정보 함꼐
- 관리자 상품 리스트에 옵션 정보 표시 및 드롭다운 구현
- 상품 추가 시 옵션 필드 초기화
- 관련 UI 스타일 및 레이아웃 업데이트

* feat(member): 카카오 토큰 관리 필드 및 로직 추가

- Member 도메인에 kakaoAccessToken, kakaoRefreshToken 추가
- MemberEntity 및 MemberEntityMapper 변경
  - 카카오 엑세스 토큰과 리프레시 토큰 필드 추가 및 매핑 로직 적용
- loginWithKakao 유스케이스에서 토큰 갱신 로직 구현
  - 기존 멤버 객체에 토큰 정보를 반영 후 저장
- schema.sql에 Member 테이블의 토큰 필드 추가
- Order 테이블 정의 추가

* feat(order): 주문 도메인 및 영속성 계층 추가

- 주문 도메인 모델 및 엔티티 추가
- OrderEntityMapper 추가로 도메인 모델과 엔티티 간 매핑 구현
- OrderJpaRepository 추가로 주문 엔티티 저장소 인터페이스 정의
- OrderPersistenceAdapter 구현으로 주문 데이터 저장소 기능 구현
- OrderRepository 포트 인터페이스 정의 및 Adapter 연결
- application.properties에 Kakao Message API 및 base-url 설정 추가
- Option 도메인에 decreaseQuantity 메서드 수정 및 이름과 수량을 업데이트하는 update 메서드 추가

* feat(order): 카카오톡 주문 메시지 발송 기능 추가

- KakaoMessageApiClient 구현
- AppProperties 추가
  - 애플리케이션 기본 URL 설정 관리
- KakaoApiClientException 추가
- KakaoProperties에 messageMeUri 속성 추가
- OrderUseCase, PlaceOrderRequest, OrderResponse 구현
  - 옵션 ID로 옵션을 조회하는 기능 추가
- OptionPersistenceAdapter 수정
  - ProductEntity 대신 엔티